[project]
name = "in-the-loop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.1.0",
    "jupyterlab>=4.4.0",
    "langchain>=0.3.23",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.71.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "seaborn>=0.13.2",
    "spork>=1.2.0",
]
